--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <h1>Welcome</h1>
+    <h1> This is my deployment</h1>
+    <div>
+        <img src='2bce8d30-c907-48cd-a20e-b8f2918538b9.jpeg' alt="goku mate">
+    </div>
 </body>
 </html>
